<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.utilisateur.cryptotext.ChangePassword">

    <Button
        android:text="@string/changePwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/changePassword"
        android:textSize="18sp"
        android:onClick="changePwd" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/oldPwd"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp"
        android:id="@+id/newPwd"
        android:layout_alignParentEnd="true"
        android:hint="@string/newPwd" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/newPwd"
        android:layout_alignParentStart="true"
        android:layout_marginTop="53dp"
        android:id="@+id/newPwdConf"
        android:layout_alignParentEnd="true"
        android:hint="@string/newPwdConf" />

    <TextView
        android:text="@string/chgPwdInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/chgPwdInfo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textSize="18sp"
        android:maxLines="2"
        android:lines="1"
        android:enabled="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="68dp"
        android:id="@+id/oldPwd"
        android:hint="@string/oldPwd"
        android:layout_below="@+id/chgPwdInfo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
