<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_enter_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.utilisateur.cryptotext.EnterPassword">

    <Button
        android:text="@string/saveChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saveChanges"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="saveChanges" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_above="@+id/saveChanges"
        android:layout_marginBottom="41dp"
        android:id="@+id/pwdConf"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/confirmPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_above="@+id/pwdConf"
        android:layout_marginBottom="58dp"
        android:id="@+id/pwd"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/enterPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info"
        android:layout_alignParentTop="true"
        android:layout_marginTop="78dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textSize="18sp"
        android:text="@string/enterKSPwd" />
</RelativeLayout>