<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_enter_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.utilisateur.cryptotext.MainActivity">

    <TextView
        android:text="@string/enterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textSize="18sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:id="@+id/passwordConfirmation"
        android:layout_alignParentEnd="true"
        android:hint="@string/confirmPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_above="@+id/passwordConfirmation"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="52dp"
        android:layout_alignParentEnd="true"
        android:hint="@string/password" />

    <Button
        android:text="@string/saveChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="74dp"
        android:id="@+id/save"
        android:onClick="saveChanges"/>
</RelativeLayout>
